# django-check-html-middleware

./: .gitignore  README.md  deploy.sh  pytest.ini  setup.cfg
check_html/: __init__.py
check_html/tests/: test_CheckHTMLMiddleware.py
django_check_html_middleware/: __init__.py
django_check_html_middleware/tests/: test_CheckHTMLMiddleware.py
mysite/: settings.py
