[metadata]
name = django-check-html-middleware
version = 0.1
description = A Django middleware to check the html created by your application (during development)
long_description = file: README.md
url = https://www.example.com/
author = Thomas Guettler
author_email = guettliml.django-check-html-middleware@thomas-guettler.de
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Programming Language :: Python :: 3

[options]
include_package_data = true
packages = check_html
install_requires = \
    utidylib
    pytest-django
    pytest-mock
    Django
    six
