[metadata]
name = django-check-html-middleware
version = 2021.07.21
description = A Django middleware to check the html created by your application (during development)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/guettli/django-check-html-middleware
author = Thomas Guettler
author_email = guettliml.django-check-html-middleware@thomas-guettler.de
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = check_html
python_requires = >= 3.6
install_requires = \
    utidylib
    pytest-django
    pytest-mock
    Django>=2.2
    six
